Fix backend CORS for deployed frontend